--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "^18",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
+    "prettier": "3.3.3",
     "typescript": "^5",
     "typescript-eslint": "^8.14.0"
   }
