--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest --maxWorkers=50%",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand"
   },
   "dependencies": {
     "next": "15.0.3",
@@ -16,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,6 +30,8 @@
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "husky": "^9.1.6",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "typescript": "^5",
