--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "prepare": "husky",
     "test": "jest --maxWorkers=50%",
     "test:watch": "jest --watch --maxWorkers=25%",
-    "test:ci": "jest --runInBand"
+    "test:ci": "jest --runInBand",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@testing-library/user-event": "^14.5.2",
@@ -20,8 +22,16 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
     "@eslint/js": "^9.14.0",
     "@jest/globals": "^29.7.0",
+    "@storybook/addon-essentials": "^8.4.5",
+    "@storybook/addon-interactions": "^8.4.5",
+    "@storybook/addon-onboarding": "^8.4.5",
+    "@storybook/blocks": "^8.4.5",
+    "@storybook/nextjs": "^8.4.5",
+    "@storybook/react": "^8.4.5",
+    "@storybook/test": "^8.4.5",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
@@ -32,6 +42,7 @@
     "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
     "husky": "^9.1.6",
     "jest": "^29.6.4",
@@ -39,6 +50,7 @@
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
+    "storybook": "^8.4.5",
     "typescript": "^5",
     "typescript-eslint": "^8.14.0"
   }
